--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 
@@ -26,7 +26,7 @@ def getGitTag = { ->
 }
 
 minecraft {
-    version = "1.8.9-11.15.1.1722"
+    version = "1.10.2-12.18.1.2050"
     runDir = "minecraft"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -34,7 +34,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_20"
+    mappings = "snapshot_20160518"
 }
 
 version =  "${getGitTag()}-${minecraft.version}"
