--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 
@@ -16,6 +16,10 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 // ensure Java 8 compatibility
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
+
+compileJava {
+    sourceCompatibility = targetCompatibility = '1.8'
+}
 
 /*
  * Gets the version name from the latest Git tag
@@ -35,7 +39,7 @@ def getGitTag = { ->
 }
 
 minecraft {
-    version = "1.10.2-12.18.1.2050"
+    version = "1.12-14.21.1.2387"
     runDir = "minecraft"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -43,10 +47,10 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20160710"
+    mappings = "snapshot_20170624"
 }
 
-version = getGitTag()
+version = "${getGitTag()}-${minecraft.version}"
 group = "info.ata4.minecraft.mineshot" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Mineshot"
 
